# SWESessions1

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: addition.py  average.py  division.py  is_even.py  max.py  min.py  modulo.py  multiplication.py  power.py  subtraction.py
