[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "github-actions-practice"
version = "0.1.0"
description = "A repository for practicing GitHub Actions."
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy"
]

[tool.ruff]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
